# raspberrypi_AI

./: .gitignore  README.md
4b/: rsync_pc2pi.sh  rsync_pi2pc.sh  toolchain.cmake
4b/CMake_Template/: CMakeLists.txt  main.cpp
4b/onnxruntime-linux-aarch64-1.23.2/lib/: libonnxruntime.so.1
4b/onnxruntime-linux-aarch64-1.23.2/lib/cmake/onnxruntime/: onnxruntimeConfigVersion.cmake  onnxruntimeTargets-release.cmake
4b/onnxruntime-linux-aarch64-1.23.2/lib/pkgconfig/: libonnxruntime.pc
4b/opencv_test/: CMakeLists.txt  CMakePresets.json  main.cpp
4b/rtsp_server_demo/: CMakeLists.txt  main.cpp
4b/rtsp_server_demo_lambda/: main.cpp
4b/yolo_test/: CMakeLists.txt  main.cpp
4b/yolo_test_mp4/: CMakeLists.txt  main.cpp
5/: rsync_pc2pi.sh  rsync_pi2pc.sh  toolchain.cmake
5/CMake_Template/: CMakeLists.txt  main.cpp
5/hailo_cam_optimized/: main.cpp
5/hailo_test/: main.cpp
5/hailo_video_test/: CMakeLists.txt  main.cpp
5/opencv_test/: CMakeLists.txt  main.cpp
5/refactor_hailo_cam_optimized/: CMakeLists.txt  capture.cpp  config.hpp  hailo_init.cpp  infer.cpp  main.cpp  thread_safe_queue.hpp
5/std_expected_test/: main.cpp
5/v4l2_test/: CMakeLists.txt  main.cpp
